# localization

./: .gitignore  distancemap.xml  draw_map_marker.py  export.launch  forcemap.xml  images.txt  images.xml  notes.md  notes.txt  readme.md  todo.md
catkin_ws_user/: Plots.xml  output.csv
catkin_ws_user/src/fisheye_camera_matrix/: CMakeLists.txt
catkin_ws_user/src/fisheye_camera_matrix/config/: default.calib  newCalib.calib  test.calib
catkin_ws_user/src/fisheye_camera_matrix/launch/: camera_matrix_publisher.launch  undistorted_image_publisher.launch
catkin_ws_user/src/fisheye_camera_matrix/src/: camera_matrix_publisher.cpp  offline_calibration_manual.cpp
catkin_ws_user/src/forward_camera/: CMakeLists.txt  package.xml
catkin_ws_user/src/forward_camera/config/: out_camera_params.xml
catkin_ws_user/src/forward_camera/src/: forward_pattern_calibration.cpp  forward_undistort_camera.cpp  live_pattern_calibration.cpp  undistort_camera.cpp
catkin_ws_user/src/local_localization/: CMakeLists.txt  package.xml
catkin_ws_user/src/local_localization/doxygen/: config.doxyfile
catkin_ws_user/src/local_localization/mapTables/: distancemap.xml  distancemap_10_res.xml  forcemap.xml  forcemap_new.xml  forcemap_old.xml
catkin_ws_user/src/local_localization/src/: camera_overlay.cpp  camera_undistort.cpp  forcemap_generator.cpp  global_localization.cpp  utility.h
catkin_ws_user/src/map_publisher/launch/: robotics_lab.launch
catkin_ws_user/src/map_publisher/map/: fu_robotics_lab_map.yaml
catkin_ws_user/src/omni_camera/: CMakeLists.txt  package.xml
catkin_ws_user/src/omni_camera/config/: out_camera_params.xml
catkin_ws_user/src/omni_camera/src/: live_pattern_calibration.cpp  omni_pattern_calibration.cpp  omni_undistort_camera.cpp  undistort_camera.cpp
catkin_ws_user/src/test/: CMakeLists.txt  package.xml
catkin_ws_user/src/test/src/: camera_overlay.cpp  forcemap_generator.cpp  test_main.cpp  utility.h
docs/: annotated.html  classCCameraOverlay.html  classCForceMapGenerator.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_func.html  utility_8h_source.html
docs/html/: camera__overlay_8cpp.html  classCCameraOverlay-members.html  classCCameraOverlay.html  classCForceMapGenerator-members.html  classCForceMapGenerator.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  forcemap__generator_8cpp.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html  utility_8h.html  utility_8h_source.html
docs/html/search/: all_5.js  all_8.js  all_b.js  all_c.js  files_0.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
docs/latex/: annotated.tex  camera__overlay_8cpp.tex  classCCameraOverlay.tex  classCForceMapGenerator.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  forcemap__generator_8cpp.tex  refman.tex  utility_8h.tex
docs/search/: all_0.js  all_1.js  classes_0.js  functions_4.js  functions_6.js
